# mopac_gpu

./: CMakeLists.txt  README.md  test_cusolver.F90
.github/workflows/: CI.yaml
examples/: README.md  benzene.mop  ethanol.mop  h2o_cpu.mop  h2o_gpu_force.mop  mozyme_1gpu.mop  mozyme_2gpu_pair.mop  peptide_aaa.mop  peptide_aaa_2gpu.mop  peptide_gg.mop  peptide_gg_2gpu.mop
include/: CMakeLists.txt
scripts/: compare_cpu_gpu.py  merge_peptide_csv.py  peptide_bench.py  peptide_sweep_plot.sh  plot_peptide_csv.py  run_examples_compare.py  test_mozyme_gpu.sh
src/: CMakeLists.txt  mopend.F90  run_mopac.F90  setup_mopac_arrays.F90
src/MOZYME/: density_for_MOZYME.F90
src/deprecated/: mod_gpu_info.F90  mod_vars_cuda.F90  pulay_for_gpu.F90
src/gpu/: cublas_interfaces.F90  cuda_wrappers.cu
src/interface/: CMakeLists.txt  mopac_api_finalize.F90  mopac_api_flags.F90  mopac_api_initialize.F90  mopac_api_operations.F90
src/matrix/: call_rot_cuda.F90  density_cuda_i.F90  density_for_GPU.F90  diag_for_GPU.F90  eigenvectors_LAPACK.F90  eigenvectors_cuda.F90  eigenvectors_cusolver.F90  mamult_cuda_i.F90  mult_symm_AB.F90
src/models/: CMakeLists.txt  refer.F90
src/models/money/: money.py
src/properties/: mullik.F90
tests/: gpu_bench.F90  gpu_density_verify.F90  gpu_rot_2gpu_verify.F90  gpu_rot_verify.F90  gpu_scf_compare.F90  gpu_verify.F90  mozyme_h2o.mop
tests/examples/: H2O_1SCF_PM7.mop
